--- a/css/general.css
+++ b/css/general.css
@@ -41,6 +41,7 @@ nav.desktop-nav {
     z-index: 9999;
     width: 100%;
     background: #ffffff;
+    box-shadow: 0px 0px 20px #7889587d;
 }
 
 nav .top-nav {
@@ -49,11 +50,14 @@ nav .top-nav {
     padding: 0.5rem;
     font-family: 'Quattrocento', serif;
     text-align: center;
+    font-size: small;
 }
 
 nav.desktop-nav img.nav-logo {
     height: 100px;
     object-fit: contain;
+    max-height: 100px;
+    transition: max-height 0.5s ease; 
 }
 
 nav.desktop-nav .main-nav {
@@ -75,8 +79,8 @@ nav.desktop-nav .nav-link::before{
     background-repeat: no-repeat;
     background-size: contain;
     position: absolute;
-    height: 20px;
-    width: 20px;
+    height: 13px;
+    width: 13px;
     top: 50%;
     left: 4px;
     transform: translate(0%, -50%);
@@ -91,8 +95,8 @@ nav .nav-link::after{
     background-repeat: no-repeat;
     background-size: contain;
     position: absolute;
-    height: 20px;
-    width: 20px;
+    height: 13px;
+    width: 13px;
     top: 50%;
     right: 4px;
     transform: translate(0%, -50%);
@@ -303,7 +307,7 @@ p.price{
     }
 
     nav.mobile-nav div#mobile-nav-content {
-        padding: 146px 0px 0px 0px;
+        padding: 200px 0px 0px 0px;
     }
 }
 
@@ -408,7 +412,7 @@ p.price{
     top: -63px;
     left: -55px;
     transform: rotate(16deg);
-    cursor: none;
+    pointer-events: none;
 }
 
 .second-block h2 {
@@ -438,7 +442,8 @@ p.price{
 
 .item-card .card-title {
     margin-top: 0.5rem;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    font-weight: 600;
 }
 
 .item-card img.card-image {
@@ -447,6 +452,11 @@ p.price{
     object-fit: cover;
     object-position: top;
     border-radius: 10px;
+}
+
+.item-card p.body-text-sm {
+    font-size: 14px;
+    font-style: italic;
 }
 
 .item-card p.price {
@@ -470,10 +480,6 @@ p.price{
     .second-block .grid {
         grid-column-gap: 1rem;
     }
-
-    .item-card {
-        padding: 0.5rem 0.5rem 3rem 0.5rem;
-    }
 }
 
 @media screen and (max-width: 994px){
@@ -485,13 +491,14 @@ p.price{
         grid-template-columns: 1fr 1fr;
         grid-row-gap: 1rem;
     }
-}
 
-@media screen and (max-width: 640px){
     .second-block img.scndBlock-topELement {
         opacity: 0.3;
         left: -93px;
     }
+}
+
+@media screen and (max-width: 640px){
 
     .second-block .grid {
         grid-template-columns: 1fr;
@@ -527,4 +534,164 @@ p.price{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 50px;
     grid-column-gap: 1.5rem;
+    grid-row-gap: 1.5rem;
 }
+
+.third-block img.thirdBlock-topRightELement {
+    height: 273px;
+    /* width: 200px; */
+    position: absolute;
+    top: -108px;
+    right: -60px;
+    transform: rotate(236deg);
+    pointer-events: none;
+}
+
+img.thirdBlock-topCenterELement {
+    height: 75px;
+    position: absolute;
+    top: -70px;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+}
+
+.third-block .filterContainer {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.custom-select-container {
+    margin-right: 1rem;
+    font-family: 'Quattrocento', serif;
+    font-size: 14px;
+    color: #5E6848;
+}
+
+.custom-select {
+    position: relative;
+    width: 200px;
+    display: inline-block;
+    /* margin: 10px; */
+  }
+  
+  .selected-option {
+    width: 100%;
+    padding: 7px;
+    border: 1px solid #5E6848;
+    border-radius: 5px;
+    background-color: #fff;
+    cursor: pointer;
+    position: relative;
+  }
+
+.selected-option::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 6px;
+    background-image: url(../images/icons/down.svg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 13px;
+    height: 13px;
+    transform: translate(0%, -50%);
+}
+  
+  .options {
+    display: none;
+    position: absolute;
+    width: 100%;
+    /* max-height: 150px; */
+    overflow-y: auto;
+    background-color: #F3F7F1;
+    border: 1px solid #5E6848;
+    border-radius: 5px;
+    top: 45px;
+    z-index: 5;
+  }
+  .options.show {
+    display: block;
+  }
+
+  
+  .option {
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 14px; /* Adjust font size as needed */
+    color: #5E6848; /* Adjust text color as needed */
+  }
+  
+  .option:hover {
+    background-color: #727B5E;
+    color: #ffffff; /* Color on hover, adjust as needed */
+  }
+  
+
+@media screen and (max-width: 1200px){
+
+}
+
+@media screen and (max-width: 1100px){
+
+}
+
+@media screen and (max-width: 1025px){
+}
+
+@media screen and (max-width: 994px){
+
+}
+
+@media screen and (max-width: 769px){
+    .third-block img.thirdBlock-topRightELement {
+        top: -138px;
+        right: -99px;
+        transform: rotate(249deg);
+        opacity: 0.3;
+    }
+
+    .third-block .grid {
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 1.5rem;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 640px){
+    img.thirdBlock-topCenterELement {
+        height: 55px;
+    }
+
+    .third-block .grid {
+        grid-template-columns: 1fr;
+    }
+
+    .third-block .filterContainer {
+        flex-direction: column;
+    }
+
+    .custom-select-container {
+        margin-right: 0rem;
+        margin-bottom: 0.7rem;
+    }
+
+    .custom-select-container,
+    .custom-select {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 500px){
+
+}
+
+@media screen and (max-width: 400px){
+
+}
+
