--- a/css/general.css
+++ b/css/general.css
@@ -29,6 +29,10 @@ p {
     font-size: 18px;
 }
 
+.body-text-sm {
+    font-size: 14px;
+}
+
 main {
 	position: relative;
 	overflow: hidden;
@@ -146,7 +150,7 @@ nav.mobile-nav {
 .body-text,
 .body-text-sm,
 p.price{
-    color: #5E6848;
+    color: #5E6848!important;
 }
 
 @media screen and (max-width: 1200px){
@@ -367,7 +371,7 @@ p.price{
 
 @media screen and (max-width: 769px){
     .header-block {
-        padding: 184px 0px 0px 0px;
+        padding: 184px 0px 80px 0px;
     }
 
     .header-block img.header-image {
@@ -398,43 +402,12 @@ p.price{
 
 }
 
-/* --------------second bloc----------- */
-
-.second-block {
-    background-image: url(../images/orange-bg.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 80px 0px;
-    position: relative;
-    overflow: hidden;
-}
-
-.second-block img.scndBlock-topELement {
-    height: 256px;
-    position: absolute;
-    top: -63px;
-    left: -55px;
-    transform: rotate(16deg);
-    pointer-events: none;
-}
-
-.second-block h2 {
-    text-align: center;
-}
-
-.second-block .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-top: 50px;
-    grid-column-gap: 1.5rem;
-}
-
+/* -----------------item card------------------ */
 .item-card {
     border: 2px solid #5E6848;
-    border-radius: 10px;
+    border-radius: 5px;
     overflow: hidden;
-    padding: 1rem 1rem 4rem 1rem;
+    padding: 0.5rem 0.5rem 4rem 0.5rem;
     position: relative;
     background: white;
     transition: box-shadow 0.3s ease;
@@ -455,11 +428,10 @@ p.price{
     width: 100%;
     object-fit: cover;
     object-position: top;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .item-card p.body-text-sm {
-    font-size: 14px;
     font-style: italic;
 }
 
@@ -469,7 +441,125 @@ p.price{
     right: 1rem;
     font-family: 'IM Fell French Canon SC', serif;
     font-size: 1.5rem;
-    color: #DC8D53;
+    color: #DC8D53!important;
+    font-weight: 600;
+}
+
+@media screen and (max-width: 769px){
+    .second-block img.scndBlock-topELement {
+        opacity: 0.3;
+        left: -93px;
+    }
+
+    .item-card {
+        padding: 0.5rem 0.5rem 3rem 0.5rem;
+    }
+
+    .item-card img.card-image {
+        height: 154px;
+    }
+
+    .item-card p.price {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 640px){
+    .item-card {
+        padding: 0.5rem 0.5rem 3rem 0.5rem;
+    }
+}
+
+/* --------------second bloc----------- */
+
+.second-block {
+    background-image: url(../images/orange-bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 80px 0px;
+    position: relative;
+    overflow: hidden;
+}
+
+.second-block img.scndBlock-topELement {
+    height: 256px;
+    position: absolute;
+    top: -63px;
+    left: -55px;
+    transform: rotate(16deg);
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+.second-block h2 {
+    text-align: center;
+}
+
+.bestsellers.slider-container {
+    width: 75%;
+    margin: 30px auto 0px auto;
+    position: relative;
+}
+
+.bestsellers-slider .owl-stage-outer {
+    overflow: visible!important;
+}
+
+
+.bestsellers-slider .owl-item {
+    background: #ffffff;
+}
+
+.bestsellers-slider .owl-item.active .item-card{
+    opacity: 1;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+.bestsellers-slider .item-card {
+    height: 100%;
+    opacity: 0.2;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+.bestsellers.slider-container .item-card img.card-image {
+    height: 300px;
+}
+
+.bestsellers-slider .owl-nav {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    pointer-events: none;
+}
+
+.bestsellers-slider .owl-nav button.owl-next, 
+.bestsellers-slider .owl-nav button.owl-prev {
+    height: 50px;
+    width: 50px;
+    background-image: url(../images/icons/arrow-slider.svg)!important;
+    background-position: center!important;
+    background-repeat: no-repeat!important;
+    background-size: 70%!important;
+    color: transparent!important;
+    position: relative;
+    pointer-events: auto;
+}
+
+.bestsellers-slider .owl-nav button.owl-prev {
+    left: -95px;
+}
+
+.bestsellers-slider .owl-nav button.owl-next {
+    right: -95px;
+    transform: rotate(180deg);
 }
 
 @media screen and (max-width: 1200px){
@@ -481,8 +571,8 @@ p.price{
 }
 
 @media screen and (max-width: 1025px){
-    .second-block .grid {
-        grid-column-gap: 1rem;
+    .bestsellers.slider-container {
+        width: 80%;
     }
 }
 
@@ -491,26 +581,35 @@ p.price{
 }
 
 @media screen and (max-width: 769px){
-    .second-block .grid {
-        grid-template-columns: 1fr 1fr;
-        grid-row-gap: 1rem;
-    }
-
     .second-block img.scndBlock-topELement {
         opacity: 0.3;
         left: -93px;
     }
+
+    .bestsellers-slider .item-card img.card-image {
+        height: 250px!important;
+    }
+
+    .bestsellers-slider .owl-nav button.owl-prev {
+        left: -60px;
+    }
+
+    .bestsellers-slider .owl-nav button.owl-next {
+        right: -60px;
+    }
 }
 
 @media screen and (max-width: 640px){
-
-    .second-block .grid {
-        grid-template-columns: 1fr;
-        grid-row-gap: 1rem;
+    .bestsellers.slider-container {
+        width: 75%;
     }
 
-    .item-card img.card-image {
-        height: auto;
+    .bestsellers-slider .owl-nav button.owl-prev {
+        left: -50px;
+    }
+
+    .bestsellers-slider .owl-nav button.owl-next {
+        right: -50px;
     }
 }
 
@@ -535,10 +634,10 @@ p.price{
 
 .third-block .grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     margin-top: 50px;
-    grid-column-gap: 1.5rem;
-    grid-row-gap: 1.5rem;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
 }
 
 .third-block img.thirdBlock-topRightELement {
@@ -549,6 +648,7 @@ p.price{
     right: -60px;
     transform: rotate(236deg);
     pointer-events: none;
+    opacity: 0.5;
 }
 
 img.thirdBlock-topCenterELement {
@@ -567,6 +667,7 @@ img.thirdBlock-topCenterELement {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .custom-select-container {
@@ -661,8 +762,7 @@ img.thirdBlock-topCenterELement {
     }
 
     .third-block .grid {
-        grid-template-columns: 1fr 1fr;
-        grid-row-gap: 1.5rem;
+        grid-template-columns: 1fr 1fr 1fr;
         margin-top: 40px;
     }
 }
@@ -673,19 +773,28 @@ img.thirdBlock-topCenterELement {
     }
 
     .third-block .grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 0.5rem;
+        grid-row-gap: 0.5rem;
     }
 
-    .third-block .filterContainer {
+    /* .third-block .filterContainer {
         flex-direction: column;
     }
 
     .custom-select-container {
         margin-right: 0rem;
         margin-bottom: 0.7rem;
+    } */
+
+    .custom-select-container:last-child {
+        margin-right: 0rem;
     }
 
-    .custom-select-container,
+    .custom-select-container {
+        width: 30%;
+    }
+
     .custom-select {
         width: 100%;
     }
@@ -720,13 +829,13 @@ img.thirdBlock-topCenterELement {
     margin-right: auto!important;
 }
 
-.slider-container {
+.cafe.slider-container {
     width: 60%;
     margin: 53px auto 0px auto;
     position: relative;
 }
 
-.slider-container::before {
+.cafe.slider-container::before {
     content: '';
     position: absolute;
     background-image: url(../images/icons/element-3.svg);
@@ -737,9 +846,10 @@ img.thirdBlock-topCenterELement {
     width: 211px;
     top: -231px;
     left: -209px;
+    opacity: 0.5;
 }
 
-.slider-container::after {
+.cafe.slider-container::after {
     content: '';
     position: absolute;
     background-image: url(../images/icons/element-8.svg);
@@ -750,9 +860,10 @@ img.thirdBlock-topCenterELement {
     width: 261px;
     bottom: -56px;
     right: -204px;
+    opacity: 0.5;
 }
 
-.slider-container .cafe-slider .item {
+.cafe.slider-container .cafe-slider .item {
     -webkit-transition: transform 0.5s;
     transition: transform 0.5s;
     transform: scale(0.7);
@@ -760,7 +871,7 @@ img.thirdBlock-topCenterELement {
     background-color: #fffbf7;
 }
 
-.slider-container .cafe-slider .item img {
+.cafe.slider-container .cafe-slider .item img {
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
@@ -768,23 +879,23 @@ img.thirdBlock-topCenterELement {
     transition: all 0.5s;
 }
 
-.slider-container .cafe-slider .owl-item.active .item {
+.cafe.slider-container .cafe-slider .owl-item.active .item {
     transform: scale(1);
     -webkit-transition: transform 0.5s;
     transition: transform 0.5s;
 }
 
-.slider-container .cafe-slider .owl-item.active .item img{
+.cafe.slider-container .cafe-slider .owl-item.active .item img{
     opacity: 1;
     -webkit-transition: all 0.5s;
     transition: all 0.5s;
 }
 
-.slider-container .cafe-slider .owl-stage-outer {
+.cafe.slider-container .cafe-slider .owl-stage-outer {
     overflow: visible;
 }
 
-.slider-container .cafe-slider .owl-dots {
+.cafe.slider-container .cafe-slider .owl-dots {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -792,7 +903,7 @@ img.thirdBlock-topCenterELement {
     margin-top: 1.5rem;
 }
 
-.slider-container .cafe-slider .owl-dots .owl-dot {
+.cafe.slider-container .cafe-slider .owl-dots .owl-dot {
     background: #FF946D;
     height: 12px;
     width: 12px;
@@ -801,48 +912,9 @@ img.thirdBlock-topCenterELement {
     margin: 0rem 0.5rem;
 }
 
-.slider-container .cafe-slider .owl-dots .owl-dot.active {
+.cafe.slider-container .cafe-slider .owl-dots .owl-dot.active {
     opacity: 1;
 }
-
-@media screen and (max-width: 1200px){
-
-}
-
-@media screen and (max-width: 1100px){
-
-}
-
-@media screen and (max-width: 1025px){
-}
-
-@media screen and (max-width: 994px){
-
-}
-
-@media screen and (max-width: 769px){
-
-}
-
-@media screen and (max-width: 640px){
-    .slider-container {
-        width: 80%;
-    }
-
-    .menu-container .grid{
-        grid-template-columns: 1fr!important;
-    }
-}
-
-@media screen and (max-width: 500px){
-
-}
-
-@media screen and (max-width: 400px){
-
-}
-
-
 
 /* -----menu ----------- */
 .menu-container {
@@ -869,4 +941,132 @@ img.thirdBlock-topCenterELement {
 .menu-container .grid img.menu-img {
     height: auto;
     width: 100%;
+}
+
+@media screen and (max-width: 1200px){
+
+}
+
+@media screen and (max-width: 1100px){
+
+}
+
+@media screen and (max-width: 1025px){
+}
+
+@media screen and (max-width: 994px){
+
+}
+
+@media screen and (max-width: 769px){
+    .fourth-block p.body-text {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 640px){
+    .cafe.slider-container {
+        width: 80%;
+    }
+
+    .menu-container .grid{
+        grid-template-columns: 1fr!important;
+    }
+
+    .fourth-block p.body-text {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 500px){
+
+}
+
+@media screen and (max-width: 400px){
+
+}
+
+/* -------------fifth block------------------ */
+.fifth-block {
+    background-image: url(../images/orange-green-bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 80px 0px;
+    position: relative;
+    overflow: hidden;
+}
+
+.fifth-block .grid {
+    margin-top: 66px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row-gap: 42px;
+    grid-column-gap: 20px;
+}
+
+.fifth-block .testi-card {
+    background: white;
+    padding: 2.5rem 1.5rem 1.5rem 1.5rem;
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px #78895845;
+    position: relative;
+    text-align: center;
+}
+
+.fifth-block .testi-card {
+    transform: rotate(3deg);
+    z-index: 1;
+}
+
+.fifth-block .testi-card:nth-child(2n) {
+    transform: rotate(-12deg);
+    z-index: 2;
+}
+
+.fifth-block .testi-card:nth-child(4n) {
+    transform: rotate(-3deg);
+    z-index: 1;
+    top: -20px;
+}
+
+.fifth-block .testi-card::before {
+    content: "";
+    position: absolute;
+    background-image: url(../images/icons/element-5.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 56px;
+    width: 56px;
+    top: -12%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+@media screen and (max-width: 1100px){
+
+}
+
+@media screen and (max-width: 1025px){
+}
+
+@media screen and (max-width: 994px){
+
+}
+
+@media screen and (max-width: 769px){
+
+}
+
+@media screen and (max-width: 640px){
+}
+
+@media screen and (max-width: 500px){
+    .fifth-block .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 400px){
 }
