--- a/css/general.css
+++ b/css/general.css
@@ -1070,3 +1070,73 @@ img.thirdBlock-topCenterELement {
 
 @media screen and (max-width: 400px){
 }
+
+.social-media-container {
+    margin-bottom: 80px;
+}
+
+.social-media-container h2{
+    text-align: center;
+}
+
+.grid-social {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+}
+
+.tiktok-con, .insta-con, .facebook-con{
+    overflow: hidden;
+    background: #ffffff;
+    border-radius: 5px;
+    border: 1rem solid #ffffff;
+    width: 100%;
+}
+
+/* .tiktok-con,
+.insta-con {
+    width: 370px;
+} */
+
+.tiktok-con {
+    height: 490px;
+}
+
+.tiktok-con .tiktok-embed {
+    margin: 0px!important;
+}
+
+.facebook-con{
+    height: 490px;
+}
+
+.insta-con {
+    height: 490px;
+}
+
+@media screen and (max-width: 769px){
+    .grid-social {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .tiktok-con {
+        grid-column: 1 / span 2;
+    }
+}
+
+@media screen and (max-width: 640px){
+
+    .insta-con, .facebook-con{
+        grid-column: 1 / span 2;
+    }
+
+    .tiktok-con {
+        height: 391px!important;
+    }
+
+    .insta-con, .facebook-con {
+        height: 540px;
+    }
+}
